config: Fix bugs about handling config files
Yobi did not handle some cases correctly about config files.

* Fix a bug that the config files specified by user are ignored; In the
  case, do not create the files by default even if they don't exist.
* Do not update application.secret if the config file is out of conf
  directory. The file may not be Yobi's.
* Tell the user to update application.secret if Yobi failed to update
  it.
* Refactoring: Move members for config files into the ConfigFile inner
  class

--- a/app/views/welcome/restart.scala.html
+++ b/app/views/welcome/restart.scala.html
@@ -18,6 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
+@(hasFailedToUpdateSecret: Boolean = false)
 @import utils.TemplateHelper._
 <!DOCTYPE html>
 <html>
@@ -57,6 +58,9 @@
                 <h3>@Messages("app.restart.welcome")</h3>
                 <p class="secret-box txt-center">
                     @Html(Messages("app.restart.notice"))
+                    @if(hasFailedToUpdateSecret) {
+                        @Html(Messages("app.restart.updateSecretYourself"))
+                    }
                 </p>
             </div>
         </div>
