--- a/app/views/code/svnDiff.scala.html
+++ b/app/views/code/svnDiff.scala.html
@@ -39,7 +39,7 @@
                     <span class="d-caret"><span class="caret"></span></span>
                 </button>
                 <ul class="dropdown-menu">
-                @defining(RepositoryService.getRepository(project).getBranchNames()) { branches =>
+                @defining(RepositoryService.getRepository(project).getRefNames()) { branches =>
                     @for(branch <- branches){
                         @common.branchItem("history", project, branch, null,
                             utils.TemplateHelper.equals(branch, selectedBranch))
