site-admin: show warning affix when admin user was logged in

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6154,3 +6154,14 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         text-align:center;
     }
 }
+
+.admin-logged-in-affix {
+  z-index:999;
+  padding: 10px 10px;
+  width:100%;
+  color:white;
+  font-size:20px;
+  background-color: #ad0000;
+  text-align: center;
+  font-weight: bold;
+}
