--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6204,3 +6204,22 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   vertical-align: middle;
 }
 
+.watcher-count{
+  opacity: 0.9 !important;
+  border: 0 !important;
+  text-shadow: none;
+}
+
+.watch-on {
+    opacity: 1 !important;
+    background-color: #b6da54 !important;
+}
+
+.nofocus{
+  outline:0 !important;
+}
+
+.watch-btn > button {
+  padding: 4px 10px;
+}
+
