--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -717,7 +717,7 @@ span.issue-label {
     }
 
     &.ybtn-small {
-        padding: 2px 10px !important;
+        padding: 3px 10px !important;
         font-size: 13px !important;
     }
 
@@ -1354,4 +1354,19 @@ span.issue-label {
     display: block;
     padding: 4px 4px 0px 4px;
     color: 666;
+}
+
+.down-arrow{
+  &:after {
+    margin-left: 5px;
+    display: inline-block;
+    vertical-align: middle !important;
+    width: 0;
+    .transition(all 0.3s ease);
+    height: 0;
+    border-top: 4px solid @yobi-inverse;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    content: "";
+  }
 }
