code-browser: change url to use branchName at code browser
Currently, when a user click file 'open' button in the git project's
code browser, always commit hash id is used.
This commit will change to use branch name in stead of commit hash id.

Also, when a user select branch at branch selection dropdown list,
cleaner url is used which is removed encoded HEAD strings.

eg.
Before: http://yobi.io/dlab/hive/code/refs%252Fheads%252Fmaster/AUTHORS
After : http://yobi.io/dlab/hive/code/master/AUTHORS

--- a/app/views/code/partial_view_file.scala.html
+++ b/app/views/code/partial_view_file.scala.html
@@ -25,10 +25,21 @@
 @import java.net.URLEncoder
 @import utils.Markdown
 
+@getRevIdString(revId:String) = @{
+    var revIdString = "";
+    if(project.vcs.equalsIgnoreCase("git")) {
+        revIdString = branchItemName(branch)
+    } else {
+        revIdString = revId;
+    }
+    revIdString
+}
+
 @defining(path.substring(path.lastIndexOf("/") + 1)) { fileName =>
 @defining(getFileRev(project.vcs, files)) { revId=>
 @defining(routes.CodeApp.showRawFile(project.owner, project.name, revId, path)) { filePath =>
-@defining(routes.CodeApp.openFile(project.owner, project.name, revId, path)) { pathToOpenFile =>
+@defining(getRevIdString(revId)){ revIdString =>
+@defining(routes.CodeApp.openFile(project.owner, project.name, revIdString, path)) { pathToOpenFile =>
 <div class="file-wrap" data-type="file">
     <div class="file-header nm">
         <div id="fileInfo" class="file-info">
@@ -113,6 +124,7 @@
     }
     }
 </div>
+}
 }
 }
 }
