user-expression: improve username expression
- show name & avatar at content page with popover
- fix alignment with ago date
- remove transparency of tooltip

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -159,6 +159,7 @@ input[type=number]::-webkit-outer-spin-button {
 .bgorange { background:@orange; }
 .bggray   { background:#f5f5f5; }
 .vmiddle  { vertical-align:middle !important; }
+.vertical-top  { vertical-align:top !important; }
 .vtop     { vertical-align:top    !important; }
 
 /** form elements **/
