--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -343,3 +343,14 @@ li.select2-result-with-children:first-of-type {
 .select2-chosen .branch-label {
     margin-top:-2px;
 }
+
+.tooltip {
+  font-size: 12px;
+}
+
+.tooltip.in {
+  font-size: 12px;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
