--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6165,3 +6165,19 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   text-align: center;
   font-weight: bold;
 }
+
+.no-margin-no-padding {
+  margin: 0px !important;
+  padding: 0px !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+
+.no-text-decoration{
+  text-decoration: none !important;
+}
+
+.ago-date {
+  vertical-align: middle;
+}
+
