Project: Fix does not apply width select2 dropdown in create project and project setting page

--- a/app/views/project/create.scala.html
+++ b/app/views/project/create.scala.html
@@ -48,7 +48,7 @@
             </label>
           </dt>
           <dd>
-            <select id="project-owner" name="owner" data-toggle="select2" data-format="user" class="mb10">
+            <select id="project-owner" name="owner" data-toggle="select2" data-format="user" class="mb10" style="min-width: 220px;">
                 <option data-type="user"
                         data-avatar-url="@UserApp.currentUser().avatarUrl"
                         value="@UserApp.currentUser().loginId">
