--- a/app/views/project/setting.scala.html
+++ b/app/views/project/setting.scala.html
@@ -111,7 +111,7 @@
                     <div class="cu-label vmiddle">@Messages("code.branches.defaultBranch")</div>
                     <div class="cu-desc">
                         <select id="project-default-branch" name="defaultBranch"
-                                data-toggle="select2" data-format="branch" data-dropdown-css-class="branches">
+                                data-toggle="select2" data-format="branch" data-dropdown-css-class="branches" style="min-width: 220px;">
                             @for(branchName <- branches if Branches.itemType(branchName).equals("branch")){
                                 <option value="@branchName"
                                         @if(branchItemName(branchName) == branchItemName(project.defaultBranch)){ selected }>
