Markdown: Fix word break to keep word

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -109,6 +109,7 @@
     background-color:#f8f8f8;
     padding: 10px;
     margin:10px 0;
+    word-break : normal;
 
     code {
       marign : 0;
