--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5298,21 +5298,8 @@ label.issue-item-row {
                     margin-right: 115px;
 
                     .filename {
-                        color:transparent;
-                        font-size:0;
-
-                        &:before {
-                            content:attr(title);
-                            color:@base-text-color;
-                            font-size:@base-font-size;
-                            cursor:text;
-                        }
-                    }
-                    .pathB {
-                        display:block;
-                        color:transparent;
-                        font-size:0;
-                        .opacity(0);
+                        color:@base-text-color;
+                        font-size:@base-font-size;
                     }
                 }
 
@@ -5328,6 +5315,16 @@ label.issue-item-row {
                 overflow: auto;
                 overflow-x: auto;
                 overflow-y: hidden;
+
+                .patch-header {
+                    .path {
+                        display:block;
+                        color:transparent;
+                        font-size:0;
+                        .opacity(0);
+                        height: 0;
+                    }
+                }
 
                 table {
                     width: 100%;
