--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5690,6 +5690,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     &:hover { color:@link-hover-color; text-decoration:underline; }
 }
 
+.commit-hash { font-family: @fixed-font-family !important;}
+
 .referred-event {
   margin: 0 2px;
   padding: 0px 5px;
