--- a/app/views/git/viewChanges.scala.html
+++ b/app/views/git/viewChanges.scala.html
@@ -63,11 +63,11 @@
                                     case (commit: PullRequestCommit) => {
                                         @commit.state match {
                                             case PullRequestCommit.State.PRIOR => {
-                                                <strong class="blue-txt mr10">@shortId(commitId)</strong>
+                                                <strong class="blue-txt mr10 commit-hash">@shortId(commitId)</strong>
                                                 <span>@commit.getCommitMessage.split("\n")(0) (@Messages("review.outdated"))</span>
                                             }
                                             case _ => {
-                                                <strong class="blue-txt mr10">@shortId(commitId)</strong>
+                                                <strong class="blue-txt mr10 commit-hash">@shortId(commitId)</strong>
                                                 <span>@commit.getCommitMessage.split("\n")(0)</span>
                                             }
                                         }
@@ -88,7 +88,7 @@
                             @for(commit <- pull.pullRequestCommits if commit.state == PullRequestCommit.State.CURRENT){
                             <li data-value="@commit.commitId">
                                 <a href="@routes.PullRequestApp.specificChange(project.owner, project.name, pull.number, commit.commitId)">
-                                    <strong class="blue-txt mr10">@commit.commitShortId</strong>
+                                    <strong class="blue-txt mr10 commit-hash">@commit.commitShortId</strong>
                                     <span>@commit.getCommitMessage.split("\n")(0)</span>
                                 </a>
                             </li>
