--- a/app/views/organization/group_board_list.scala.html
+++ b/app/views/organization/group_board_list.scala.html
@@ -53,7 +53,7 @@
                     </select>
                 </div>
                 <div class="search-bar span4">
-                    <input name="filter" class="textbox" type="text" placeholder="@Messages("title.searchByKeyword")" value="@param.filter">
+                    <input name="filter" class="textbox group-board" type="text" placeholder="@Messages("title.searchByKeyword")" value="@param.filter">
                     <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
                 </div>
             </form>
