--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -20,6 +20,7 @@
 **@
 @()
 @import utils.TemplateHelper._
+@import play.mvc.Http.Context
 
 @**<!-- yobi.ui.Dialog -->**@
 <div id="yobiDialog" class="modal hide fade yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
@@ -173,11 +174,14 @@
         }
 
         // notify flash messages
-        @requestHeader.flash.get(utils.Constants.TITLE) match {
-            case Some(title) => { $yobi.alert("@Messages(title)", null, "@Messages(requestHeader.flash.get(utils.Constants.DESCRIPTION).get)"); }
-            case None => { @requestHeader.flash.data.foreach {
-                case (_, value) => { $yobi.notify("@Messages(value)", 3000); }
+        @for(key <- Context.current().flash().keySet) {
+            @if(key != utils.Constants.TITLE &&
+                key != utils.Constants.DESCRIPTION){
+                $yobi.notify("@Messages(Context.current().flash().get(key))", 3000);
             }
+            @if(key == utils.Constants.TITLE){
+                $yobi.alert("@Messages(Context.current().flash().get(key))", null,
+                            "@Messages(Context.current().flash().get(utils.Constants.DESCRIPTION))");
             }
         }
 
