issue-label: Remove modal animation when editing

--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -23,7 +23,7 @@
 @import play.mvc.Http.Context
 
 @**<!-- yobi.ui.Dialog -->**@
-<div id="yobiDialog" class="modal hide fade yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="yobiDialog" class="modal hide yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="btn-dismiss"><button type="button" class="btn-transparent" data-dismiss="modal">&times;</button></div>
     <div class="message">
         <div class="center-text">
