--- a/app/views/project/partial_issuelabels_editlabel.scala.html
+++ b/app/views/project/partial_issuelabels_editlabel.scala.html
@@ -20,7 +20,7 @@
 **@
 @(project:Project)
 
-<div id="editLabel" class="modal hide fade yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="editLabel" class="modal hide yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="btn-dismiss"><button type="button" class="btn-transparent" data-dismiss="modal">&times;</button></div>
   <div class="message edit-label-form">
     <div class="center-txt">
