--- a/app/views/project/partial_issuelabels_editcategory.scala.html
+++ b/app/views/project/partial_issuelabels_editcategory.scala.html
@@ -19,7 +19,7 @@
 * limitations under the License.
 **@
 
-<div id="editCategory" class="modal hide fade yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="editCategory" class="modal hide yobiDialog" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="btn-dismiss"><button type="button" class="btn-transparent" data-dismiss="modal">&times;</button></div>
   <div class="message edit-label-category-form">
     <div class="center-txt">
