notification: Add noti mail send option
User can choose to send modification mail or not

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6239,3 +6239,16 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   border-radius: 2px;
   color: #3592B5;
 }
+
+.send-notification-check {
+    vertical-align: middle;
+    padding: 9px;
+    border-radius: 3px;
+    strong {
+        margin-right: 5px;
+    }
+    .checkbox.inline {
+        padding-top: 0px;
+    }
+}
+
