--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -78,6 +78,14 @@
         </div>
 
         <div class="actions">
+          @if(posting.getAuthor.equals(UserApp.currentUser()) && !posting.readme){
+            <span class="send-notification-check">
+              <label class="checkbox inline">
+                <input type="checkbox" name="notificationMail" id="notificationMail" value="yes" checked>
+                <strong>@Messages("notification.send.mail")</strong>
+              </label>
+            </span>
+          }
           <button class="ybtn ybtn-info" tabindex="3">@Messages("button.save")</button><!--
          --><a href="javascript:history.back();" class="ybtn" tabindex="4">@Messages("button.cancel")</a>
         </div>
